--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
-language: node_js
+sudo: false
+language:
+  - node_js
 node_js:
   - "0.10"
-  - "0.8"
+  - "0.12"
+  - "iojs"
+before_install:
+  - 'if [ "${TRAVIS_NODE_VERSION}" == "0.8" ] ; then npm install -g npm@2.7.1; fi'
