--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timedown",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A multi countdown timer for node with namespace",
   "author": {
     "name": "Jonathan Brumley",
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "mocha",
     "build": "make dist",
-    "postinstall": "make"
+    "postinstall": "make clean all"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
@@ -29,7 +29,7 @@
     "ms": "^0.7.1",
     "should": "^7.1.0",
     "tick-tock": "^1.0.0",
-    "timedown": "^1.0.5"
+    "timedown": "^1.0.6"
   },
   "bugs": {
     "url": "https://github.com/cayasso/timedown/issues"
