--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timedown",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A multi countdown timer for node with namespace",
   "author": {
     "name": "Jonathan Brumley",
@@ -14,8 +14,19 @@
   "scripts": {
     "test": "mocha",
     "build": "make dist",
-    "postinstall": "make clean all"
+    "postinstall": "make"
   },
+  "keywords": [
+    "timer",
+    "counter",
+    "countdown",
+    "interval",
+    "timedown",
+    "count",
+    "watch",
+    "setInterval",
+    "timeout"
+  ],
   "devDependencies": {
     "babelify": "^6.3.0",
     "browserify": "^11.1.0",
@@ -28,8 +39,7 @@
     "eventemitter3": "^1.1.1",
     "ms": "^0.7.1",
     "should": "^7.1.0",
-    "tick-tock": "^1.0.0",
-    "timedown": "^1.0.6"
+    "tick-tock": "^1.0.0"
   },
   "bugs": {
     "url": "https://github.com/cayasso/timedown/issues"
