--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "main": "./node/index",
   "scripts": {
-    "test": "mocha",
+    "test": "make test",
     "build": "make dist",
-    "postinstall": "make"
+    "prepublish": "make"
   },
   "keywords": [
     "timer",
@@ -28,14 +28,19 @@
     "timeout"
   ],
   "devDependencies": {
-    "babelify": "^6.3.0",
-    "browserify": "^11.1.0",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "mocha": "*",
-    "pre-commit": "1.1.1",
+    "pre-commit": "1.1.2",
     "should": "*"
   },
   "dependencies": {
-    "babel": "^5.8.23",
     "eventemitter3": "^1.1.1",
     "ms": "^0.7.1",
     "should": "^7.1.0",
